Creacion de base de datos y las migraciones pendientes

--- a/OrdenesPedidos/OrdenesPedidos.Backend/appsettings.json
+++ b/OrdenesPedidos/OrdenesPedidos.Backend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "LocalConnection": "Server=DESKTOP-OL67CO8\\SQLEXPRESS;Database=ordenesPedidosDB;User Id=wgaray;Password=@willieg.1979;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
