--- a/OrdenesPedidos/OrdenesPedidos.Frontend/OrdenesPedidos.Frontend.csproj
+++ b/OrdenesPedidos/OrdenesPedidos.Frontend/OrdenesPedidos.Frontend.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.13" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.13" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.3" PrivateAssets="all" />
+    <PackageReference Include="NPOI" Version="2.7.2" />
+    <PackageReference Include="System.Net.Http.Json" Version="9.0.3" />
   </ItemGroup>
 
 </Project>
